# cpal-a8269d3-miniexample

./: Cargo.toml  README.md
src/: audio.rs  mini_client.rs  mini_ui.rs
