[package]
name = "mini-audio-playback"
version = "0.1.0"
edition = "2021"

[dependencies]
# Audio
rodio = "0.21.1"
cpal = { git = "https://github.com/RustAudio/cpal.git" }

# Hotkey support for client
global-hotkey = "0.7.0"

# GUI for UI
eframe = { version = "0.33.0", features = ["persistence"] }
egui = "0.33.0"
winit = { version = "0.30.12", features = ["wayland"] }

# Logging
log = "0.4.28"
flexi_logger = "0.31.7"

# For lazy initialization
once_cell = "1.20"

[patch.crates-io]
cpal = { git = "https://github.com/RustAudio/cpal.git" }

[[bin]]
name = "mini-client"
path = "src/mini_client.rs"

[[bin]]
name = "mini-ui"
path = "src/mini_ui.rs"
